--- a/WebApplication1/Areas/Admin/Views/Tags/Create.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Tags/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model WebApplication1.Areas.Admin.ViewModels.CreateTagViewModel
-
+﻿@model WebApplication1.Areas.Admin.ViewModels.Tags.CreateTagViewModel
 @{
     ViewData["Title"] = "Create Tag";
     Layout = "~/Views/Shared/_Layout.cshtml";
