--- a/WebApplication1/Areas/Admin/Views/Tags/Edit.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Tags/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Areas.Admin.ViewModels.EditTagViewModel
+﻿@model WebApplication1.Areas.Admin.ViewModels.Tags.EditTagViewModel
 
 @{
     ViewData["Title"] = "Edit Tag";
