--- a/WebApplication1/Areas/Admin/Views/Tags/Index.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Tags/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebApplication1.Areas.Admin.ViewModels.TagViewModel>
+﻿@model IEnumerable<WebApplication1.Areas.Admin.ViewModels.Tags.TagViewModel>
 
 @{
     ViewData["Title"] = "Manage Tags";
