update About link in Index view to point to AboutController

--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                     This website serves as a platform to document my journey, share technical articles, and showcase
                     projects I'm working on.
                 </p>
-                <a asp-controller="Home" asp-action="About" class="btn btn-primary">Learn More About Me</a>
+                <a asp-controller="About" asp-action="Index" class="btn btn-primary">Learn More About Me</a>
             </div>
         </div>
     </div>
