feat: add new admin views and update layout references for consistency

--- a/WebApplication1/Areas/Admin/Views/Category/Create.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Category/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApplication1.Areas.Admin.ViewModels.Category.CreateCategoryViewModel
 @{
     ViewData["Title"] = "Create New Category";
-    Layout = "_AdminLayout";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="container-fluid">
