--- a/WebApplication1/Areas/Admin/Views/Tag/Create.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Tag/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApplication1.Areas.Admin.ViewModels.Tag.CreateTagViewModel
 @{
     ViewData["Title"] = "Create Tag";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Create New Tag</h2>
