--- a/WebApplication1/Areas/Admin/Views/Tag/Index.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Tag/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Manage Tags";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Tag Management</h2>
