--- a/WebApplication1/Areas/Admin/Views/Category/index.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Category/index.cshtml
@@ -1,7 +1,7 @@
 @model IEnumerable<WebApplication1.Areas.Admin.ViewModels.Category.CategoryViewModel>
 @{
     ViewData["Title"] = "Categories";
-    Layout = "_AdminLayout";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="container-fluid">
