--- a/WebApplication1/Areas/Admin/Views/Post/Create.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Post/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebApplication1.Areas.Admin.ViewModels.Post.CreatePostViewModel
 @{
     ViewData["Title"] = "Create New Post";
-    Layout = "_AdminLayout";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="container-fluid">
