--- a/WebApplication1/Areas/Admin/Views/Tag/Delete.cshtml
+++ b/WebApplication1/Areas/Admin/Views/Tag/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Delete Tag";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Delete Tag</h2>
